[ci] : fix Ledger reusable workflows required inputs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_build.yml@v1
     with:
       upload_app_binaries_artifact: compiled_app_binaries
+      run_for_devices: '["nanos", "nanox", "nanosp", "stax"]'
 
   src_lint_check:
     name: Lint check on source files
@@ -33,9 +34,9 @@ jobs:
       run: |
         yapf tests/ --recursive -d
 
-  scan_build:
-    name: Static analysis
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/_check_clang_static_analyzer.yml@v1
+  guideline_enforcer:
+    name: Check guidelines
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_guidelines_enforcer.yml@v1
   
   ragger_tests:
     name: Functional tests with Ragger
